--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://nkushwaha1993.github.io/contactlist",
+  "homepage":"http://nkushwaha1993.github.io/contactlist/",
   "name": "address-book-app",
   "version": "0.1.0",
   "private": true,
